--- a/Revision B/PartsList.html
+++ b/Revision B/PartsList.html
@@ -8,13 +8,13 @@
 
 <b>Mouser</b>
 <ul>
-<li><a href="http://www.mouser.com/ProductDetail/Omron-Electronics/G5LE-1-DC3/?qs=sGAEpiMZZMtGt%252bn33CgIP%252b7g7ixgbSnuvCd0i84lZNE%3d">3x - Relays - $3.60</a></li>
+<li><a href="http://www.mouser.com/ProductDetail/Omron-Electronics/G5LE-14-DC5/?qs=sGAEpiMZZMtSzCF3XBhmW%2f7R2vaP0U3c7rouljqC5CM%3d">3x - Relays - $3.24</a></li>
 <li><a href="http://www.mouser.com/ProductDetail/Phoenix-Contact/1935200/?qs=%2fha2pyFaduhyGAHO0gKMpwWI2%2foV1M5sHCE0UFp2YJ4%3d">1x - 6 Pin Terminal Block - $1.08</a></li>
 <li><a href="http://www.mouser.com/ProductDetail/Vishay/KBL06-E4-51/?qs=%2fha2pyFadug6Nx3c2IQYpFF7gjpvBYjkNX5R6Ou124wlNATaVu44Iw%3d%3d">1x - Bridge Rectifier - $0.91</a></li>
 <li><a href="http://www.mouser.com/ProductDetail/EPCOS/B41827A8107M000/?qs=sGAEpiMZZMsh%252b1woXyUXj%252bo0JChp315mznpwqPRhM4o%3d">1x - 100uf Capacitor - $0.10</a></li>
 <li><a href="http://www.mouser.com/ProductDetail/EPCOS/B41827A9106M000/?qs=sGAEpiMZZMsh%252b1woXyUXj%252bo0JChp315mo5a90H0XYa4%3d">1x - 10uf Capacitor - $0.07</a></li>
-<li><a href="http://www.mouser.com/ProductDetail/NXP-Semiconductors/BAV20133/?qs=sGAEpiMZZMtldOIVIVqa3RgolB6YeRy2UktHKfcTWQA%3d">3x - Diodes - $0.05</a></li>
-
+<li><a href="http://www.mouser.com/ProductDetail/NXP-Semiconductors/BAV20133/?qs=sGAEpiMZZMtldOIVIVqa3RgolB6YeRy2UktHKfcTWQA%3d">3x - Diodes - $0.15</a></li>
+<li><a href="http://www.mouser.com/ProductDetail/Fairchild-Semiconductor/2N7000_D26Z/?qs=sGAEpiMZZMsrr1kXJis%252bJ8MxWVZeJ9%252bzKmtxFyLBonI%3d">3x - Transistors - $0.27</a></li>
 </ul>
 
 <b>Digikey</b>
