Moved Temperature Pin
Moved the temperature sensor input from PIN 4 (digital) to PIN 43
(analog).  This required moving a number of components around on the
board.

--- a/Revision B/PartsList.html
+++ b/Revision B/PartsList.html
@@ -1,6 +1,6 @@
 <b>SparkFun</b>
 <ul>
-<li>IOIO OTG - $30-40??</li>
+<li><a href="https://www.sparkfun.com/products/11343">IOIO OTG - $39.95</a></li>
 <li><a href="https://www.sparkfun.com/products/117">1x - Break Away Male Headers - $2.95</a></li>
 <li><a href="https://www.sparkfun.com/products/743">1x - Break Away Female Headers - $2.95</a></li>
 <li><a href="https://www.sparkfun.com/products/10988">1x - Temperature Sensor - $1.50</a></li>
