--- a/Revision B/PartsList.html
+++ b/Revision B/PartsList.html
@@ -2,7 +2,6 @@
 <ul>
 <li><a href="https://www.sparkfun.com/products/11343">IOIO OTG - $39.95</a></li>
 <li><a href="https://www.sparkfun.com/products/117">1x - Break Away Male Headers - $2.95</a></li>
-<li><a href="https://www.sparkfun.com/products/743">1x - Break Away Female Headers - $2.95</a></li>
 <li><a href="https://www.sparkfun.com/products/10988">1x - Temperature Sensor - $1.50</a></li>
 </ul>
 
@@ -12,7 +11,9 @@
 <li><a href="http://www.mouser.com/ProductDetail/Phoenix-Contact/1935200/?qs=%2fha2pyFaduhyGAHO0gKMpwWI2%2foV1M5sHCE0UFp2YJ4%3d">1x - 6 Pin Terminal Block - $1.08</a></li>
 <li><a href="http://www.mouser.com/ProductDetail/Vishay/KBL06-E4-51/?qs=%2fha2pyFadug6Nx3c2IQYpFF7gjpvBYjkNX5R6Ou124wlNATaVu44Iw%3d%3d">1x - Bridge Rectifier - $0.91</a></li>
 <li><a href="http://www.mouser.com/ProductDetail/EPCOS/B41827A8107M000/?qs=sGAEpiMZZMsh%252b1woXyUXj%252bo0JChp315mznpwqPRhM4o%3d">1x - 100uf Capacitor - $0.10</a></li>
-<li><a href="http://www.mouser.com/ProductDetail/EPCOS/B41827A9106M000/?qs=sGAEpiMZZMsh%252b1woXyUXj%252bo0JChp315mo5a90H0XYa4%3d">1x - 10uf Capacitor - $0.07</a></li>
+<li><a href="http://www.mouser.com/ProductDetail/EPCOS/B41827A9106M000/?qs=sGAEpiMZZMsh%252b1woXyUXj%252bo0JChp315mo5a90H0XYa4%3d">2x - 10uf Capacitor - $0.14</a></li>
+<li><a href="http://www.mouser.com/ProductDetail/Xicon/299-150-RC/?qs=sGAEpiMZZMtlubZbdhIBIMALSIuq9q6fvMjti0F4HF8%3d">1x - 150kOhm Resistors - $0.10 </a></li>
+<li><a href="http://www.mouser.com/ProductDetail/Xicon/299-100K-RC/?qs=sGAEpiMZZMtlubZbdhIBIBS6fxCtzmQI26gcI2Nrqt4%3d">3x - 100kOhm Resistors - $0.30 </a></li>
 <li><a href="http://www.mouser.com/ProductDetail/NXP-Semiconductors/BAV20133/?qs=sGAEpiMZZMtldOIVIVqa3RgolB6YeRy2UktHKfcTWQA%3d">3x - Diodes - $0.15</a></li>
 <li><a href="http://www.mouser.com/ProductDetail/Fairchild-Semiconductor/2N7000_D26Z/?qs=sGAEpiMZZMsrr1kXJis%252bJ8MxWVZeJ9%252bzKmtxFyLBonI%3d">3x - Transistors - $0.27</a></li>
 </ul>
